fixed spacing for the mobile

--- a/_includes/assets/css/hamburgers.css
+++ b/_includes/assets/css/hamburgers.css
@@ -41,12 +41,12 @@ button.hamburger {
 	outline: 0px solid white;
 }
 
-.hamburger-box {
+/* .hamburger-box {
   width: 40px;
   height: 100px;
   display: inline-block;
   position: relative; 
-}
+} */
 
 .hamburger-inner {
   display: block;
